<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DecodeActivity"
    android:background="#FFFFFF">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="33dp"
        android:clickable="true"
        android:contentDescription="TODO"
        android:focusable="true"
        android:visibility="visible"
        app:backgroundTint="@color/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_file_copy_24"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_parse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="108dp"
        android:clickable="true"
        android:contentDescription=""
        android:focusable="true"
        android:visibility="visible"
        app:backgroundTint="@color/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_play_arrow_24"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="402dp"
        android:layout_height="40dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="456dp"
        android:text="@string/tapTag"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gif_encode"
        android:layout_width="411dp"
        android:layout_height="544dp"

        android:src="@drawable/waiting"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/tv_output"
        android:layout_width="371dp"
        android:layout_height="462dp"

        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible" />

    <CheckBox
        android:id="@+id/chk_data"
        android:layout_width="251dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="144dp"
        android:checked="true"
        android:text="@string/showContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkTech"
        android:layout_width="286dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="109dp"
        android:checked="true"
        android:text="@string/showTech"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chk_data" />

</androidx.constraintlayout.widget.ConstraintLayout>