<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">


    <ImageView
        android:id="@+id/img_welcome"
        android:layout_width="404dp"
        android:layout_height="23dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:contentDescription="TODO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fab_erase"
        app:srcCompat="@drawable/logo_" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="211dp"
        android:layout_height="272dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="107dp"
        android:contentDescription="TODO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cnt_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="32dp"
            android:clickable="true"
            android:contentDescription="TODO"
            android:focusable="true"
            android:src="@drawable/ic_baseline_add_24"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="normal"
            app:icon="@drawable/ic_baseline_add_24"
            app:rippleColor="@color/colorPrimaryDark" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_erase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:contentDescription="TODO"
        android:focusable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/fab_decode"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_delete_forever_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_encode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:contentDescription="TODO"
        android:focusable="true"

        android:visibility="invisible"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/cnt_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_downward_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_decode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:contentDescription="TODO"
        android:focusable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/fab_encode"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_upward_24" />


    <TextView
        android:id="@+id/tv_erase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/eraseNFC"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/fab_erase"
        app:layout_constraintEnd_toStartOf="@+id/fab_erase"
        app:layout_constraintTop_toTopOf="@+id/fab_erase" />

    <TextView
        android:id="@+id/tv_encode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/encodeNFC"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/fab_encode"
        app:layout_constraintEnd_toStartOf="@+id/fab_encode"
        app:layout_constraintTop_toTopOf="@+id/fab_encode" />

    <TextView
        android:id="@+id/tv_decode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/decodeNFC"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/fab_decode"
        app:layout_constraintEnd_toStartOf="@+id/fab_decode"
        app:layout_constraintTop_toTopOf="@+id/fab_decode" />


</androidx.constraintlayout.widget.ConstraintLayout>